# StudyPilot

./: README.md  pyproject.toml
bringstudy/: __init__.py  __main__.py  agenda.py
studypilot/: __init__.py  __main__.py  app.py
studypilot/model/: auth.py  storage.py
studypilot/qss/: theme.qss
studypilot/ui/: login.py  mainwindow.py  splash.py
studypilot/ui/widgets/: agenda.py  horaire.py  importer.py  settings.py  subjects.py  tasks.py  tools.py
