[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "studypilot-local"
version = "1.1.0"
description = "StudyPilot Local – outil d'étude secondaire (PyQt5, multi-utilisateur, local)"
authors = [{name="StudyPilot", email="example@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyQt5>=5.15"]

[project.scripts]
studypilot = "studypilot.__main__:main"
bringstudy = "bringstudy.__main__:main"
